--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -2,13 +2,18 @@
     -fx-background-color: #1d1d1d;
 }
 
-.bgImageRoot{
-    -fx-background-image: url('bg.jpg');
+.bgImageRoot {
+    -fx-background-image: url('bg.png');
+    -fx-background-size: cover;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center center;
 }
 
-
 .goldRoot {
-    -fx-background-color: #4b4a08;
+    -fx-background-image: url('bg2.png');
+    -fx-background-size: cover;
+    -fx-background-repeat: no-repeat;
+    -fx-background-position: center center;
 }
 
 .label {
